# xtrain

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
tests/: adaptor_test.py  checkpoint_test.py  conftest.py  distributed_test.py  freeze_test.py  loss_metric_test.py  metric_test.py  name_test.py  strategy_test.py  trainer_test.py
xtrain/: __init__.py  base_trainer.py  closure.py  loss.py  strategy.py  trainer.py  types.py  utils.py
xtrain/data/: __init__.py  tf_dataset_adapter.py  torch_dataloader_adapter.py  utils.py
