[tool.poetry]
name = "xtrain"
version = "0.0.0"
description = "A Flax trainer"
authors = ["Ji Yu <jyu@uchc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flax = ">0.8"
jax = { extras = ["cuda12"], version = ">0.4", optional = true }

[tool.poetry.extras]
cuda12 = ["jax"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
tensorflow = "^2.16.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.3"
mkdocstrings = { extras = ["python"], version = "^0.22.0" }
mkdocs-gen-files = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
